# morrow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  README.zh-CN.md  install.sh  morrow.example.toml  测试.txt
.github/: pull_request_template.md  release-notes.md
.github/workflows/: ci.yml  mark-hotfix-prerelease.yml  release.yml  windows-hotfix.yml  windows-wsl-stream-hotfix.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs  session_store.rs  thread_store.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-desktop/: package.json
crates/agent-desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/agent-desktop/src-tauri/capabilities/: default.json
crates/agent-desktop/src-tauri/icons/: icon.icns
crates/agent-desktop/src-tauri/src/: atomic_file.rs  lib.rs  main.rs  state.rs  wsl.rs
crates/agent-model/: Cargo.toml
crates/agent-model/src/: lib.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: lib.rs
crates/agent-remote/: Cargo.toml
crates/agent-remote/src/: client.rs  framing.rs  lib.rs  main.rs
crates/agent-remote/tests/: stdio.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs  session_store.rs  subagent_store.rs  subagent_supervisor.rs
crates/agent-sandbox/: Cargo.toml
crates/agent-sandbox/src/: lib.rs
crates/agent-server/: Cargo.toml
crates/agent-server/assets/: app.js  index.html  style.css
crates/agent-server/src/: commands.rs  lib.rs  mcp_settings.rs  models.rs  robot.rs  secrets.rs  subagent_settings.rs
crates/agent-server/web/: package.json  pnpm-lock.yaml  vite.config.ts
crates/agent-server/web/src/: App.tsx  CommandSettingsPanel.tsx  DesktopBootstrap.test.tsx  DesktopBootstrap.tsx  DesktopShell.test.tsx  DesktopShell.tsx  McpSettingsPanel.tsx  ModelSettingsPanel.tsx  SettingsView.tsx  SubagentSettingsPanel.test.tsx  SubagentSettingsPanel.tsx  WorkspaceManager.test.tsx  WorkspaceManager.tsx  api.test.ts  api.ts  composerShortcut.test.ts  desktop.test.ts  desktop.ts  main.tsx  messageScroll.test.ts  messageScroll.ts  modelTrace.test.ts  persistentSubagentPanel.test.tsx  styles.css  subagentPanel.test.tsx  subagentTrace.test.ts  subagentTrace.ts  types.ts  vite-env.d.ts
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs  mcp.rs
