[workspace]
members = [
    "crates/agent-cli",
    "crates/agent-config",
    "crates/agent-core",
    "crates/agent-model",
    "crates/agent-protocol",
    "crates/agent-runtime",
    "crates/agent-server",
    "crates/agent-sandbox",
    "crates/agent-tools",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
agent-config = { path = "crates/agent-config" }
agent-core = { path = "crates/agent-core" }
agent-model = { path = "crates/agent-model" }
agent-protocol = { path = "crates/agent-protocol" }
agent-runtime = { path = "crates/agent-runtime" }
agent-server = { path = "crates/agent-server" }
agent-sandbox = { path = "crates/agent-sandbox" }
agent-tools = { path = "crates/agent-tools" }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tower = "0.5"
