[workspace]
members = [
    "crates/agent-cli",
    "crates/agent-config",
    "crates/agent-core",
    "crates/agent-desktop/src-tauri",
    "crates/agent-model",
    "crates/agent-protocol",
    "crates/agent-remote",
    "crates/agent-runtime",
    "crates/agent-server",
    "crates/agent-sandbox",
    "crates/agent-tools",
]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"

[workspace.dependencies]
agent-config = { path = "crates/agent-config" }
agent-core = { path = "crates/agent-core" }
agent-model = { path = "crates/agent-model" }
agent-protocol = { path = "crates/agent-protocol" }
agent-remote = { path = "crates/agent-remote" }
agent-runtime = { path = "crates/agent-runtime" }
agent-server = { path = "crates/agent-server" }
agent-sandbox = { path = "crates/agent-sandbox" }
agent-tools = { path = "crates/agent-tools" }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tower = "0.5"
sha2 = "0.10"
