[package]
name = "agent-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "morrow"
path = "src/main.rs"

[dependencies]
agent-config = { workspace = true }
agent-core = { workspace = true }
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-tools = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
