[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "morrow"
path = "src/main.rs"

[dependencies]
agent-config = { workspace = true }
agent-core = { workspace = true }
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-tools = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
