[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-tools = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
