[package]
name = "agent-model"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-protocol = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
