[package]
name = "agent-model"
version.workspace = true
edition.workspace = true

[dependencies]
agent-core = { workspace = true }
agent-protocol = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
