[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
agent-config = { workspace = true }
agent-core = { workspace = true }
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-tools = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
