[package]
name = "agent-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-config = { workspace = true }
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-runtime = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
