[package]
name = "agent-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-config = { workspace = true }
agent-model = { workspace = true }
agent-protocol = { workspace = true }
agent-runtime = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
] }
