[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true

[dependencies]
agent-config = { workspace = true }
agent-protocol = { workspace = true }
agent-sandbox = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
